<resources>
    <string name="app_name">OSU Events</string>
    <string name="tab_bookmarked">Bookmarked</string>
    <string name="tab_today">Today</string>
    <string name="tab_this_week">This Week</string>
    <string name="tab_this_month">This Month</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>
    <string name="action_bookmark">Bookmark</string>

    <string name="event_details">Event Details</string>
    <string name="add_to_calender">Add to Calender</string>
    <string name="show_in_map">Show in Map</string>
    <string name="open_url">Open URL</string>
    <string name="all_day">All-day event</string>

    <string name="long_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="short_date_format">MMM dd</string>
    <string name="time_format">hh:mm a</string>
    <string name="search_date_format">yyyy-MM-dd</string>

    <string name="date">%1$s - %2$s</string>
    <string name="time">%1$s %2$s</string>
    <string name="title_activity_search">Search</string>

    <string name="search">Search</string>
    <string name="search_results">Search results</string>
    <string name="search_prompt">Enter specific information about the event you are looking for.</string>
    <string name="keywords">Keywords</string>
    <string name="keywords_info">Keywords that should match event name or description</string>
    <string name="location">Location</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>

    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="internet_connection">Please make sure you are connected to the internet!</string>

</resources>
